package.json ready

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chemaking13.github.io/20.ReactPortfolio/",
+  "homepage": "https://ChemaKing13.github.io/20.ReactPortfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
